--- a/projeto01/src/index.html
+++ b/projeto01/src/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./output.css" rel="stylesheet" />
-    <title>Document</title>
+    <title>Conceitos fundamentais</title>
   </head>
   <body>
-    <h1 class="text-3xl font-bold underline">Hello world!</h1>
+    <h1 class="bg-green-500 text-red-300 hover:bg-red-300 hover:text-green-500">
+      Tudo são classes
+    </h1>
+    <button
+      class="bg-blue-500 hover:bg-blue-300 text-white font-bold py-2 px-4 rounded"
+    >
+      Botão
+    </button>
+    <button
+      class="bg-green-500 hover:bg-green-300 text-white font-bold py-2 px-4 rounded"
+    >
+      Botão
+    </button>
+    <button
+      class="bg-red-500 hover:bg-red-300 text-white font-bold py-2 px-4 rounded"
+    >
+      Botão
+    </button>
   </body>
 </html>
