--- a/projeto01/src/index.html
+++ b/projeto01/src/index.html
@@ -10,11 +10,7 @@
     <h1 class="bg-green-500 text-red-300 hover:bg-red-300 hover:text-green-500">
       Tudo são classes
     </h1>
-    <button
-      class="bg-blue-500 hover:bg-blue-300 text-white font-bold py-2 px-4 rounded"
-    >
-      Botão
-    </button>
+    <button class="btn-blue btn-blue:hover">Botão</button>
     <button
       class="bg-green-500 hover:bg-green-300 text-white font-bold py-2 px-4 rounded"
     >
@@ -28,5 +24,9 @@
     <div
       class="w-4 md:w-6 lg:w-10 h-4 md:h-6 lg:h-10 m-4 bg-green-400 md:bg-blue-400 lg:bg-red-400"
     ></div>
+    <input
+      type="text"
+      class="bg-gray-300 text-gray-900 focus:bg-red-600 focus:text-red-400"
+    />
   </body>
 </html>
