feat: treina box-sizing, display

--- a/projeto01/src/secao02/index.html
+++ b/projeto01/src/secao02/index.html
@@ -16,5 +16,25 @@
     >
       <p>Texo do container</p>
     </div>
+    <div class="container bg-green-700 p-4 m-4 mx-auto md:bg-blue-500">
+      <p>Exercício 01</p>
+    </div>
+    <div
+      class="container bg-purple-700 border-2 border-purple-900 m-4 box-border p-10 mx-auto"
+    >
+      <p>Border box</p>
+    </div>
+    <div
+      class="container bg-teal-400 border-2 border-teal-900 m-4 box-content p-10 mx-auto"
+    >
+      <p>Box content</p>
+    </div>
+    <div class="container">
+      <span class="block bg-red-300">Elemento inline</span
+      ><span class="block bg-red-300">Elemento inline</span>
+    </div>
+    <div class="bg-blue-500 inline-block">Block</div>
+    <div class="bg-blue-500 inline-block">Block</div>
+    <div class="bg-green-800 hidden">Estou visivel</div>
   </body>
 </html>
